# media2devonthink

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
m2dt/: m2dt.py  sqlite_utils.py  utils.py  youtube.py
